# YOLOV8-Object-Detection-Optimization

./: README.md  Train_YOLO_Models.ipynb
libtorch/: CMakeLists.txt  main.cpp
tensorRT/: CMakeLists.txt  main.cpp  yolov8_tensorRT_inference
